## Process this file with automake to produce Makefile.in

SUBDIRS = nfs rpcsvc sys

noinst_HEADERS = \
	execute.h \
	exportfs.h \
	ha-callout.h \
	misc.h \
	mounts.h \
	nfs_mntent.h \
	nfs_paths.h \
	nfslib.h \
	rpcmisc.h \
	tcpwrapper.h \
	xio.h \
	xlog.h \
	xmalloc.h \
	xcommon.h

MAINTAINERCLEANFILES = Makefile.in
